Changes since 1.0.0 alpha3 2003-06-17
	* Permissions can now be assigned to link type sections and pages and image and file type stories.
	* Headings and dividers are now properly displayed when not logged in.

Changes since 1.0.0 alpha2 2003-06-06
	* Owners of "class" sites can now add the class as an editor. 
	* Activation/Deactivation Date form now has valid day options 
	* When an admin is acting as another person, they can only see what that person would see. 
	* The "default" page now appropriately shows sites of which a group member is owner. 
	* Move/Copy now shows sites properly when opened on first page load. 
	* More debugging lines have been removed.
	
Changes since 1.0.0 alpha 2003-06-06
	* Removed debug output

First Release - 1.0.0 alpha 2003-06-06