@@ -1,6 +1,7 @@
 Changes since 1.0.0 alpha3 2003-06-17
 	* Permissions can now be assigned to link type sections and pages and image and file type stories.
 	* Headings and dividers are now properly displayed when not logged in.
+	* DATABASE CHANGE! The class_number field in the class table should be changed in type from an int(11) to a varchar(15) and the default set to "000"
 
 Changes since 1.0.0 alpha2 2003-06-06
 	* Owners of "class" sites can now add the class as an editor. 
